--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,36 @@
+sudo: false
 language: python
 python:
   - "3.5"
-install: 
+env:
+  - SDL_VIDEODRIVER=dummy SDL_AUDIODRIVER=disk
+install:
+  # We do this conditionally because it saves us some downloading if the
+  # version is the same.
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda install conda-build
+  # Useful for debugging any issues with conda
+  - conda info -a
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy nose cython scikit-learn
+  - source activate test-environment
+  # - make all
+  #- conda build build_tools/conda-recipe --quiet
+  - conda install -q --file=requirements_conda.txt
   - pip install -r requirements.txt
+  - pip install -r requirements2.txt
+  - pip install -r requirements_scikit.txt
+  - pip install -r requirements_scikit2.txt
+  - pip install -r requirements_ext.txt
+  - pip install -U git+https://github.com/quantopian/qgrid --no-deps  
+  # - pip install hg+http://bitbucket.org/pygame/pygame
 script:
   - python setup.py unittests
