--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,7 @@ env:
 install:
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    fi
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
@@ -22,18 +18,16 @@ install:
   - conda info -a
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy nose cython scikit-learn
   - source activate test-environment
+  - conda install --yes nomkl
   # - make all
   #- conda build build_tools/conda-recipe --quiet
   - conda install -q --file=requirements_conda.txt
-  - conda install --yes mkl mkl-service
   - pip install -r requirements.txt
   - pip install -r requirements2.txt
   - pip install -r requirements_scikit.txt
   - pip install -r requirements_scikit2.txt
   - pip install -r requirements_ext.txt
   - pip install -U git+https://github.com/quantopian/qgrid --no-deps  
-  # we remove MKL
-  # - conda remove --features mkl
   # - pip install hg+http://bitbucket.org/pygame/pygame
 script:
   - python setup.py unittests
