--- a/.gitignore
+++ b/.gitignore
@@ -235,7 +235,8 @@ _doc/sphinxdoc/source/notebooks/*
 build_help.bat
 _doc/sphinxdoc/source/blog/*.rst
 _doc/sphinxdoc/source/blog/rss.xml
-_doc/sphinxdoc/source/phdoc_templates/*.html
+_doc/sphinxdoc/source/phdoc_templates/*toc.html
+_doc/sphinxdoc/source/phdoc_templates/*box.html
 _doc/sphinxdoc/source/blog/feed-icon*.png
 _doc/sphinxdoc/source/phdoc_static/reveal.js/*
 _doc/notebooks/.ipynb_checkpoints/*
