fix computation of MKS

--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,4 @@ ex.*
 m.temp
 _doc/notebooks/*/.ipynb_checkpoints
 _doc/notebooks/nlp/frwiki-latest-all-titles-in-ns0
+_doc/notebooks/nlp/sample*.txt
