--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ install:
   - "%PYTHON%\\Scripts\\pip install urllib3"
   - "%PYTHON%\\Scripts\\pip install pycodestyle prompt_toolkit"
   - "%PYTHON%\\Scripts\\pymy_install3 --task=tool --source=zip graphviz"
-  - "%PYTHON%\\Scripts\\pip install memory_profiler line_profiler vprof snakeviz gprof2dot"
+  - "%PYTHON%\\Scripts\\pip install pyinstrument memory_profiler line_profiler vprof snakeviz gprof2dot"
   - "set PATH=%PATH%;C:\\projects\\mlstatpy\\build\\update_modules\\Graphviz\\bin"
   - "dir C:\\projects\\mlstatpy\\build\\update_modules\\Graphviz\\bin"
 build: off
