--- a/.local.jenkins.win.yml
+++ b/.local.jenkins.win.yml
@@ -11,6 +11,7 @@ install:
   - pip freeze
 script:
   - { CMD: "python setup.py unittests", NAME: "UT" }
+  - { CMD: "python setup.py unittests_LONG", NAME: "UT_LONG" }
 after_script:
   - python setup.py bdist_wheel
   - if [ ${DIST} != "conda" and ${VERSION} != "3.4" and ${NAME} == "UT" ] then copy dist\*.whl ..\..\local_pypi\local_pypi_server fi
