--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,14 @@
 ansiconv
 autopep8
-bqplot
 brewer2mpl
 codecov
 entrypoints
 folium
-goslate
-lifelines
-lightning-python
+jyquickhelper
 mechanize
 metakernel
 pkgtools
 plotly
-pygal
-pygal_maps_fr
 pylzma
 pyquickhelper
 pyreadline
