--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,4 @@ _doc/notebooks/nlp/profile.png
 _doc/notebooks/nlp/completion.dot
 _doc/notebooks/nlp/completion.png
 _doc/notebooks/nlp/completion.pstat
+_doc/sphinxdoc/source/c_dist/edit_bibliographie.rst
