--- a/.local.jenkins.win.yml
+++ b/.local.jenkins.win.yml
@@ -10,6 +10,7 @@ install:
   - pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ pyquickhelper pyensae pymmails pymyinstall pyrsslocal
   - pip install -r requirements.txt
   - pip freeze
+  - pip freeze > pip_freeze.txt
 script:
   - { CMD: "python -u setup.py unittests", NAME: "UT" }
   - { CMD: "python -u setup.py unittests_LONG", NAME: "UT_LONG", TIMEOUT: 3600 }
