fix an encoding issue

--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,4 @@ _doc/notebooks/nlp/completion.dot
 _doc/notebooks/nlp/completion.png
 _doc/notebooks/nlp/completion.pstat
 _doc/sphinxdoc/source/c_dist/edit_bibliographie.rst
+_doc/notebooks/Untitled.ipynb
