--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
   - conda install --yes nomkl
   # - make all
   #- conda build build_tools/conda-recipe --quiet
+  - conda install toolz
   - conda install -q --file=requirements_conda.txt
   - pip install -r requirements.txt
   - pip install -r requirements2.txt
