--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ install:
   - "%PYTHON%\\Scripts\\pymy_install3 pycrypto pyzmq"
   - "%PYTHON%\\Scripts\\pip install pycryptodomex"
   - "%PYTHON%\\Scripts\\pip install urllib3"
-  - "%PYTHON%\\Scripts\\pip install pycodestyle prompt_toolkit"
+  - "%PYTHON%\\Scripts\\pip install pycodestyle prompt_toolkit seaborn"
   - "%PYTHON%\\Scripts\\pymy_install3 --task=tool --source=zip graphviz"
   - "%PYTHON%\\Scripts\\pip install pyinstrument memory_profiler line_profiler vprof snakeviz gprof2dot"
   - "set PATH=%PATH%;C:\\projects\\mlstatpy\\build\\update_modules\\Graphviz\\bin"
