reduce the number of files for requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,21 @@ brewer2mpl
 codecov
 entrypoints
 folium
+ggplot
+gprof2dot
 jyquickhelper
 metakernel
 pkgtools
 plotly
+pyinstrument
 pylzma
 pyquickhelper
 pyreadline
 python-jenkins
 requests-oauthlib
+snakeviz
+toolz
 version_information
+vprof
 xmltodict
 xlrd
