--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ install:
   - "%PYTHON%\\Scripts\\pip install azure dill mako"
   - "%PYTHON%\\Scripts\\pymy_install3 pycrypto pyzmq"
   - "%PYTHON%\\Scripts\\pip install pycryptodomex"
-  - "%PYTHON%\\Scripts\\pip install urllib3"
+  - "%PYTHON%\\Scripts\\pip install urllib3 tqdm"
   - "%PYTHON%\\Scripts\\pip install pycodestyle prompt_toolkit seaborn"
   - "%PYTHON%\\Scripts\\pymy_install3 --task=tool --source=zip graphviz"
   - "%PYTHON%\\Scripts\\pip install pyinstrument memory_profiler line_profiler vprof snakeviz gprof2dot"
