--- a/.local.jenkins.win.yml
+++ b/.local.jenkins.win.yml
@@ -16,7 +16,7 @@ script:
   - { CMD: "python -X faulthandler -X showrefcount -u setup.py unittests_LONG", NAME: "UT_LONG", TIMEOUT: 7200 }
 after_script:
   - python -u setup.py bdist_wheel
-  - if [ ${DIST} != "conda" and ${VERSION} == "3.5" and ${NAME} == "UT" ] then copy dist\*.whl {{root_path}}\..\..\..\local_pypi\local_pypi_server fi
+  - if [ ${DIST} != "conda" and ${VERSION} == "3.5" and ${NAME} == "UT" ] then copy dist\*.whl {{root_path}}\..\..\local_pypi\local_pypi_server fi
 documentation:
   - if [ ${NAME} == "UT" ] then python -u setup.py build_sphinx fi
   - if [ ${NAME} == "UT" ] then xcopy /E /C /I /Y _doc\sphinxdoc\build\html dist\html fi
