--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ ggplot
 gprof2dot
 jyquickhelper
 metakernel
+mpld3
 pkgtools
 plotly
 pyinstrument
@@ -16,6 +17,7 @@ pyquickhelper
 pyreadline
 python-jenkins
 requests-oauthlib
+shapely
 snakeviz
 toolz
 version_information
