--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,23 @@
 ansiconv
 autopep8
-brewer2mpl
-codecov
-entrypoints
-folium
-ggplot
-gprof2dot
+babel!=2.0
+blockdiag
+bokeh
+coverage
 jyquickhelper
-metakernel
-mpld3
-pkgtools
-plotly
-pyinstrument
-pylzma
-pyquickhelper
-pyreadline
-python-jenkins
-requests-oauthlib
-shapely
-snakeviz
-toolz
-version_information
-vprof
-xmltodict
-xlrd
+mutagen
+pycodestyle>=2.0.0
+pydocstyle
+pyquickhelper>1.5.2122
+semantic_version
+sphinx-bootstrap-theme
+sphinx-gallery
+sphinxcontrib-images
+sphinxcontrib-imagesvg
+sphinxcontrib-jsdemo
+sphinxjp.themes.basicstrap
+sphinxjp.themes.revealjs
+sphinxjp.themes.sphinxjp
+tqdm
+unify
+wheel
