--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -1,46 +1,26 @@
-cvxopt
 Cython
 cytoolz
+dask
 datashader
 datashape
 dill
-flask
 h5py
-ipykernel
-ipyparallel
 ipython
-ipython_genutils
 ipywidgets
 jupyter
 jupyter_client
-jupyter_console
 jupyter_core
-line_profiler
-mako
 matplotlib
-memory_profiler
 nbformat
 nbpresent
-networkx
-numba
-numpy
-odo
-openpyxl
-pandas
-path.py
-patsy
-pep8
+notebook>=5.0.0
+numpy>=1.11.0
+pandas>=0.20.0
 pillow
-pyzmq
-qtconsole
-rasterio
-reportlab 
-requests
-scikit-image
+scikit-learn
+scipy
 seaborn
-six
+setuptools
 Sphinx
 statsmodels
-sympy
-traitlets
 xarray
