--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,12 +22,13 @@ install:
   - "%PYTHON%\\Scripts\\pymy_install3 --set=pyensae"
   - "%PYTHON%\\Scripts\\pip install cryptography jyquickhelper"
   - "%PYTHON%\\Scripts\\pip install azure dill mako semantic_version"
-  - "%PYTHON%\\Scripts\\pymy_install3 pycrypto pyzmq statsmodels"
+  - "%PYTHON%\\Scripts\\pymy_install3 pycrypto pyzmq statsmodels minepy"
   - "%PYTHON%\\Scripts\\pip install pycryptodomex"
   - "%PYTHON%\\Scripts\\pip install urllib3 tqdm"
   - "%PYTHON%\\Scripts\\pip install pycodestyle prompt_toolkit seaborn"
   - "%PYTHON%\\Scripts\\pymy_install3 --task=tool --source=zip graphviz"
   - "%PYTHON%\\Scripts\\pip install pyinstrument memory_profiler line_profiler vprof snakeviz gprof2dot"
+  - "%PYTHON%\\Scripts\\pip install -r requirements"
   - "set PATH=%PATH%;C:\\projects\\mlstatpy\\build\\update_modules\\Graphviz\\bin"
   - "dir C:\\projects\\mlstatpy\\build\\update_modules\\Graphviz\\bin"
 build: off
