--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
                     sudo apt-get install -y texlive-lang-french
           
       - run:
-          name: Install 7z, unrar
+          name: Install 7z
           command: |
                     sudo apt-get install -y p7zip-full
           
@@ -44,11 +44,17 @@ jobs:
                     sudo apt-get install -y graphviz
           
       - run:
-          name: install dependencies
+          name: install dependencies 1
           command: |
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements_conda.txt
+            
+      - run:
+          name: install dependencies 2
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
             pip install -r requirements.txt
             pip install git+https://github.com/sdpython/sphinxcontrib-images.git --upgrade --no-deps
 
