--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,5 @@ _doc/notebooks/ml/img-*.png
 _doc/notebooks/ml/*.pickle
 
 _doc/sphinxdoc/source/nbcov.png
+_doc/notebooks/dsgarden/arbre.png
+_doc/notebooks/dsgarden/arbre.dot
