--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,6 +35,9 @@ build: off
 test_script:
   - "%PYTHON%\\python -u setup.py unittests"
 
+after_test:
+  - "%PYTHON%\\python -u setup.py bdist_wheel"
+
 artifacts:
   - path: dist
     name: mlstatpy
