replace png by jpg for latex conversion

--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,6 @@ _doc/notebooks/ml/*.pickle
 _doc/sphinxdoc/source/nbcov.png
 _doc/notebooks/dsgarden/arbre.png
 _doc/notebooks/dsgarden/arbre.dot
+_doc/notebooks/nlp/output_30_0.jpeg
+_doc/notebooks/nlp/output_38_0.jpeg
+_doc/notebooks/nlp/output_41_0.jpeg
