--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-dist: trusty
-sudo: false
+dist: xenial
+sudo: true
 language: python
 python:
-  - "3.6"
+  - "3.7"
 env:
   - SDL_VIDEODRIVER=dummy SDL_AUDIODRIVER=disk
 install:
