--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ jobs:
           name: copy documentation
           command: |
             mkdir -p test-reports/doc
-            cp -r  _doc/sphinxdoc/build/html test-reports/doc
+            zip -r -9  test-reports/doc/documentation_html.zip _doc/sphinxdoc/build/html
             mkdir -p test-reports/pdf
             cp _doc/sphinxdoc/build/latex/*.pdf test-reports/pdf
             cp _doc/sphinxdoc/build/latex/ml*.tex* test-reports/pdf
