--- a/.local.jenkins.win.yml
+++ b/.local.jenkins.win.yml
@@ -17,4 +17,4 @@ after_script:
 documentation:
   - if [ ${NAME} == "UT" ] then python -u setup.py build_sphinx fi
   - if [ ${NAME} == "UT" ] then xcopy /E /C /I /Y _doc\sphinxdoc\build\html dist\html fi
-  - if [ ${NAME} == "UT" ] then xcopy /E /C /I /Y _doc\sphinxdoc\build\latex\*.pdf dist\html fi
+  - if [ ${NAME} == "UT" ] then xcopy /E /C /I /Y _doc\sphinxdoc\build\elatex\*.pdf dist\html fi
