--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
+            conda install -c conda-forge xgboost
             pip install -r requirements_conda.txt
             
       - run:
