--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
   - source activate test-environment
   # - make all
   #- conda build build_tools/conda-recipe --quiet
+  - conda install -c conda-forge xgboost
   - conda install -q --file=requirements_conda.txt
   - pip install -r requirements.txt
   - pip install -U git+https://github.com/quantopian/qgrid --no-deps  
