--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ install:
   - conda install -c conda-forge xgboost
   - conda install -q --file=requirements_conda.txt
   - pip install -r requirements.txt
-  - pip install -U git+https://github.com/quantopian/qgrid --no-deps  
+  - pip install -U git+https://github.com/quantopian/qgrid --no-deps
+  - pip install -U git+https://github.com/sdpython/nbconvert.git@fixes
   # - pip install hg+http://bitbucket.org/pygame/pygame
 script:
   - python setup.py unittests
