update documentation and build

--- a/.gitignore
+++ b/.gitignore
@@ -275,3 +275,5 @@ _doc/notebooks/dsgarden/arbre.dot
 _doc/notebooks/nlp/output_30_0.jpeg
 _doc/notebooks/nlp/output_38_0.jpeg
 _doc/notebooks/nlp/output_41_0.jpeg
+_doc/sphinxdoc/source/c_ml/math/*.png
+_doc/sphinxdoc/source/c_ml/piecewise_.html
