refactoring unit tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,6 @@ install:
   - pip install -U git+https://github.com/quantopian/qgrid --no-deps
   - pip install -U git+https://github.com/sdpython/nbconvert.git@fixes
   # - pip install hg+http://bitbucket.org/pygame/pygame
+  - export PYTHONPATH=src
 script:
   - python setup.py unittests
