--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,12 +76,14 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
+            export PYTHONPATH=src
             python setup.py unittests
 
       - run:
           name: wheel
           command: |
             . venv/bin/activate
+            export PYTHONPATH=src
             python setup.py bdist_wheel
             mkdir -p test-reports/dist
             cp dist/*.whl test-reports/dist
@@ -90,6 +92,7 @@ jobs:
           name: documentation
           command: |
             . venv/bin/activate
+            export PYTHONPATH=src
             python setup.py build_sphinx
             
       - run:
