--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ install:
   #- conda build build_tools/conda-recipe --quiet
   - conda install -c conda-forge xgboost
   - conda install -q --file=requirements_conda.txt
+  - pip install pyquickhelper
   - pip install -r requirements.txt
   - pip install -U git+https://github.com/quantopian/qgrid --no-deps
   - pip install -U git+https://github.com/sdpython/nbconvert.git@fixes
