--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -13,10 +13,10 @@ matplotlib
 nbformat
 nbpresent
 notebook>=5.0.0
-numpy>=1.11.0
+numpy>=1.16.0
 pandas>=0.20.0
 pillow
-scikit-learn
+scikit-learn>=0.21
 scipy
 seaborn
 setuptools
