--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
   - conda install -c conda-forge xgboost
   - conda install -q --file=requirements_conda.txt
   - pip install pyquickhelper
+  - pip install scikit-learn>=0.21
   - pip install -r requirements.txt
   - pip install -U git+https://github.com/quantopian/qgrid --no-deps
   - pip install -U git+https://github.com/sdpython/nbconvert.git@fixes
