--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ init:
 
 install:
   - "%PYTHON%\\python -m pip install --upgrade pip"
-  - "%PYTHON%\\Scripts\\pip install pymyinstall"
+  - "%PYTHON%\\Scripts\\pip install pymyinstall>=1.3.1776"
   - "%PYTHON%\\Scripts\\pymy_install3 --set=pyensae"
   - "%PYTHON%\\Scripts\\pymy_install3 pycrypto pyzmq statsmodels minepy opencv_python"
   - "%PYTHON%\\Scripts\\pymy_install3 --task=tool --source=zip graphviz"
