--- a/.local.jenkins.lin.yml
+++ b/.local.jenkins.lin.yml
@@ -8,13 +8,13 @@ virtualenv:
   - path: {{ospathjoin(root_path, pickname("$NAME_JENKINS", project_name + "_$VERSION_$DIST_$NAME"), "_venv")}}
   
 install:
-  - $PYINT -c "from pip._internal import main;main(\"install --no-cache-dir --no-deps --index http://localhost:8067/simple/ scikit-learn>=0.21 --extra-index-url=https://pypi.python.org/simple/\".split())"
-  - $PYINT -c "from pip._internal import main;main(\"install --no-cache-dir --no-deps --index http://localhost:8067/simple/ jyquickhelper pyquickhelper pyensae pymmails pymyinstall pyrsslocal --extra-index-url=https://pypi.python.org/simple/\".split())"
-  - $PYINT -c "from pip._internal import main;main(\"install --no-cache-dir --no-deps --index http://localhost:8067/simple/ mlinsights>=0.2.312 --extra-index-url=https://pypi.python.org/simple/\".split())"
-  - $PYINT -c "from pip._internal import main;main(\"install -r requirements_conda.txt\".split())"
-  - $PYINT -c "from pip._internal import main;main(\"install -r requirements.txt\".split())"
+  - $PYINT -m pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ scikit-learn>=0.21 --extra-index-url=https://pypi.python.org/simple/
+  - $PYINT -m pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ jyquickhelper pyquickhelper pyensae pymmails pymyinstall pyrsslocal --extra-index-url=https://pypi.python.org/simple/
+  - $PYINT -m pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ mlinsights>=0.2.312 --extra-index-url=https://pypi.python.org/simple/
+  - $PYINT -m pip install -r requirements_conda.txt
+  - $PYINT -m pip install -r requirements.txt
   - $PYINT --version
-  - $PYINT -c "from pip._internal import main;main([\"freeze\"])"
+  - $PYINT -m pip freeze
 
 script:
   - { CMD: "$PYINT -u setup.py unittests", NAME: "UT" }
