--- a/.local.jenkins.lin.yml
+++ b/.local.jenkins.lin.yml
@@ -8,6 +8,7 @@ virtualenv:
   - path: {{ospathjoin(root_path, pickname("$NAME_JENKINS", project_name + "_$VERSION_$DIST_$NAME"), "_venv")}}
   
 install:
+  - $PYINT -m pip install --upgrade pip
   - $PYINT -m pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ scikit-learn>=0.21 --extra-index-url=https://pypi.python.org/simple/
   - $PYINT -m pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ jyquickhelper pyquickhelper pyensae pymmails pymyinstall pyrsslocal --extra-index-url=https://pypi.python.org/simple/
   - $PYINT -m pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ mlinsights>=0.2.312 --extra-index-url=https://pypi.python.org/simple/
