--- a/.local.jenkins.win.yml
+++ b/.local.jenkins.win.yml
@@ -4,6 +4,7 @@ python:
 virtualenv:
   - path: {{ospathjoin(root_path, pickname("%NAME_JENKINS%", project_name + "_%VERSION%_%DIST%_%NAME%"), "_venv")}}
 install:
+  - pip install --upgrade pip
   - pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ pyquickhelper pyensae pymmails pymyinstall pyrsslocal mlinsights
   - pip install -r requirements.txt
   - pip freeze
