--- a/.local.jenkins.lin.yml
+++ b/.local.jenkins.lin.yml
@@ -9,9 +9,9 @@ virtualenv:
   
 install:
   - $PYINT -m pip install --upgrade pip
-  - $PYINT -m pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ scikit-learn>=0.21 --extra-index-url=https://pypi.python.org/simple/
-  - $PYINT -m pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ jyquickhelper pyquickhelper pyensae pymmails pymyinstall pyrsslocal --extra-index-url=https://pypi.python.org/simple/
-  - $PYINT -m pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ mlinsights>=0.2.312 --extra-index-url=https://pypi.python.org/simple/
+  - $PYINT -m pip install --no-cache-dir --upgrade --no-deps --index http://localhost:8067/simple/ scikit-learn>=0.21 --extra-index-url=https://pypi.python.org/simple/
+  - $PYINT -m pip install --no-cache-dir --upgrade --no-deps --index http://localhost:8067/simple/ jyquickhelper pyquickhelper pyensae pymmails pymyinstall pyrsslocal --extra-index-url=https://pypi.python.org/simple/
+  - $PYINT -m pip install --no-cache-dir --upgrade --no-deps --index http://localhost:8067/simple/ mlinsights>=0.2.312 --extra-index-url=https://pypi.python.org/simple/
   - $PYINT -m pip install -r requirements_conda.txt
   - $PYINT -m pip install -r requirements.txt
   - $PYINT --version
