--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: bionic
 sudo: true
 language: python
 python:
@@ -24,6 +24,7 @@ install:
   - conda install -c conda-forge xgboost
   - conda install -q --file=requirements_conda.txt
   - pip install pyquickhelper
+  - pip install cpyquickhelper
   - pip install scikit-learn>=0.21
   - pip install -r requirements.txt
   - pip install -U git+https://github.com/quantopian/qgrid --no-deps
