--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
+autopep8
 blockdiag
 coverage
 cpyquickhelper>=0.2
+jupyter_sphinx
 jyquickhelper
 mako
 memory_profiler
 minepy
 mlinsights>=0.2.312
 mutagen
+pycodestyle
 pyensae>=1.2.788
 pyinstrument
+pylint
 pyquickhelper>=1.9.3240
 scikit-learn>=0.21
 snakeviz
 sphinx-bootstrap-theme
+sphinxcontrib.imagesvg
 tqdm
 vprof
 wheel
