reducing the number of dependences

--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -1,25 +1,14 @@
-bokeh
 Cython
 cytoolz
-dask
-datashape
-dill
-h5py
 ipython
 jupyter
-jupyter_client
-jupyter_core
 matplotlib
 nbformat
-nbpresent
-notebook>=5.0.0
-numpy>=1.16.0
-pandas>=0.20.0
+notebook
+numpy>=1.19.0
+pandas>=1.0
 pillow
 scipy
 seaborn
 setuptools
 Sphinx
-statsmodels
-xarray
-xgboost
