--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ autopep8
 blockdiag
 coverage
 cpyquickhelper>=0.2
+dill
 jupyter_sphinx
 jyquickhelper
 mako
 memory_profiler
+minepy
 mlinsights>=0.2.491
 pycodestyle
 pyensae>=1.2.788
