--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,17 @@
-dist: bionic
+dist: focal
 sudo: true
 language: python
 python:
-  - "3.8"
-env:
-  - SDL_VIDEODRIVER=dummy SDL_AUDIODRIVER=disk
+    - "3.9"
+
+before_install:
+    - sudo apt-get install libgeos-dev libproj-dev proj-data graphviz libblas-dev liblapack-dev
+
 install:
-  # We do this conditionally because it saves us some downloading if the
-  # version is the same.
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda install conda-build
-  # Useful for debugging any issues with conda
-  - conda info -a
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy mkl scipy nose cython scikit-learn
-  - source activate test-environment
-  # - make all
-  #- conda build build_tools/conda-recipe --quiet
-  - conda install -q --file=requirements_conda.txt
-  - pip install pyquickhelper
-  - pip install cpyquickhelper
-  - pip install scikit-learn>=0.21
-  - pip install -r requirements.txt
-  - pip install -U git+https://github.com/quantopian/qgrid --no-deps
-  # - pip install hg+http://bitbucket.org/pygame/pygame
-  - export PYTHONPATH=src
+    - pip install -r requirements_conda.txt
+    - pip install -r requirements.txt
+    - pip uninstall -y shapely
+    - pip install --no-binary shapely shapely
+
 script:
-  - python setup.py unittests
+    - python ./setup.py unittests
