--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,26 @@
 dist: focal
 sudo: true
 language: python
-python:
-    - "3.9"
+
+matrix:
+  include:
+  - python: 3.9
+    name: "Python39"
 
 before_install:
     - sudo apt-get install libgeos-dev libproj-dev proj-data graphviz libblas-dev liblapack-dev
-
-install:
-    - pip install -r requirements_conda.txt
-    - pip install -r requirements.txt
+    - wget https://apt.llvm.org/llvm.sh
+    - chmod +x llvm.sh
+    - sudo ./llvm.sh 10
+    - ls /usr/bin/llvm*
+    - export LLVM_CONFIG=/usr/bin/llvm-config
+    # - sudo ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config
+    - sudo apt-get -y install graphviz
     - pip uninstall -y shapely
     - pip install --no-binary shapely shapely
 
+install:
+  - pip install -r requirements.txt
+
 script:
-    - python ./setup.py unittests
+  - python setup.py unittests
