--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,7 @@ jobs:
           command: |
             python -m venv venv
             . venv/bin/activate
+            pip install wheel
             pip install -r requirements.txt
 
       - save_cache:
