--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
   - pip install --no-binary shapely shapely
 
 install:
+  - pip install wheel
   - pip install -r requirements.txt
   - export PYTHONPATH=src
 
