--- a/.local.jenkins.lin.yml
+++ b/.local.jenkins.lin.yml
@@ -17,7 +17,7 @@ install:
   - $PYINT -m pip freeze
 
 script:
-  - { CMD: "$PYINT -u setup.py unittests", NAME: "UT" }
+  - { CMD: "$PYINT -u setup.py unittests", NAME: "UT", TIMEOUT: 3000 }
   - { CMD: "$PYINT -u setup.py unittests_LONG", NAME: "UT_LONG", TIMEOUT: 7200, SCHEDULER: "H H(1-2) 11 * *" }
 
 after_script:
