--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - pip install --no-binary shapely shapely
 
 install:
-  - pip install wheel
+  - pip install wheel pyquicksetup
   - pip install -r requirements.txt
   - export PYTHONPATH=src
 
