--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,19 +15,27 @@ jobs:
           - v2-dependencies-
 
       - run:
-          name: Install 7z, unrar
+          name: Install dependencies for proj
           command: |
-                    sudo apt-get install -y p7zip-full
-          
+            sudo apt-get install -y libgeos-dev proj-data graphviz sqlite3 libtiff5 libtiff5-dev libtiff-dev libsqlite3-dev libcurl4-gnutls-dev
+
       - run:
-          name: Install InkScape
+          name: build proj
           command: |
-                    sudo apt-get install -y inkscape
-          
+            # see https://stackoverflow.com/questions/72442087/cant-install-proj-8-0-0-for-cartopy-linux
+            wget https://download.osgeo.org/proj/proj-9.0.0.tar.gz
+            tar -xf proj-9.0.0.tar.gz
+            cd proj-9.0.0
+            mkdir build && cd build
+            cmake ..
+            cmake --build .
+            sudo cmake --build . --target install
+            cd ..
+
       - run:
-          name: Install libproj, graphviz
+          name: install ldconfig
           command: |
-            sudo apt-get install -y libgeos-dev libproj-dev proj-data graphviz
+            sudo ldconfig
 
       - run:
           name: install dependencies
