--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,14 @@ jobs:
           - v2-dependencies-
 
       - run:
+          name: Install dependencies for graphviz
+          command: |
+            sudo apt-get install -y graphviz sqlite3 libtiff-dev libsqlite3-dev
+
+      - run:
           name: Install dependencies for proj
           command: |
-            sudo apt-get install -y libgeos-dev proj-data graphviz sqlite3 libtiff5 libtiff5-dev libtiff-dev libsqlite3-dev
+            sudo apt-get install -y libgeos-dev proj-data
 
       - run:
           name: build proj
