--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,44 @@
-# conda
-Cython
-cytoolz
-ipython
-jupyter
-matplotlib
-nbformat
-notebook
-numpy>=1.19.0
-pandas>=1.0
-pillow
-scikit-learn>=0.21
-scipy>=1.4
-seaborn
-setuptools
-statsmodels
-Sphinx
-
-# other dependencies
+astroid
 autopep8
 blockdiag
 coverage
-cpyquickhelper>=0.3
+cpyquickhelper
+Cython
+cytoolz
 dill
+ijson
+importlib_metadata
+isort
+jdcal
 jupyter_sphinx
+jupyter
 jyquickhelper
 lifelines
 mako
+matplotlib
 memory_profiler
-mlinsights>=0.3
-nbconvert>=6.0.2
+mlinsights
+nbconvert
+notebook
+pandas
+pillow
+psutil
+pybind11
 pycodestyle
 pydata_sphinx_theme
 pyensae>=1.2.788
 pyinstrument
 pylint>=2.14.0
-pyquickhelper>=1.10
+pyquickhelper>=1.11.3747
 pyquicksetup
+seaborn
+setuptools
 snakeviz
+scikit-learn>=1.1
+sphinx
 sphinx-bootstrap-theme
 sphinxcontrib.imagesvg
+statsmodels
 tqdm
 vprof
 wheel
