--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,8 @@ install:
   - "%PYTHON%\\python -m pip install --upgrade pip"
   - pip install wheel
   # for many packages
-  - "%PYTHON%\\Scripts\\pip install -r requirements-win.txt"
   # install precompiled versions not available on pypi
-  - "%PYTHON%\\Scripts\\pymy_install3 llvmlite numba"
+  - "%PYTHON%\\Scripts\\pymy_install3 llvmlite numba cartopy shapely pyproj"
   # other dependencies
   - "%PYTHON%\\Scripts\\pip install -r requirements.txt --no-deps"
   - set PYTHONPATH=src
