--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
       - run:
           name: Install dependencies for graphviz
           command: |
+                    sudo apt update
                     sudo apt-get install -y graphviz sqlite3 libtiff-dev libsqlite3-dev
 
       - run:
