--- a/requirements.txt
+++ b/requirements.txt
@@ -32,8 +32,8 @@ pydata_sphinx_theme
 pyensae>=1.2.788
 pyinstrument
 pylint>=2.14.0
-pyquickhelper>=1.11.3747
-pyquicksetup
+pyquickhelper>1.11.3747
+pyquicksetup>0.2
 seaborn
 setuptools
 snakeviz
