--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ pyensae>=1.2.788
 pyinstrument
 pylint>=2.14.0
 pyquickhelper>1.11.3747
-pyquicksetup>0.2
+pyquicksetup>=0.2.3
 seaborn
 setuptools
 snakeviz
