fix neural tree for regression + notebook

--- a/.gitignore
+++ b/.gitignore
@@ -276,3 +276,5 @@ _doc/notebooks/nlp/output_*.jpeg
 _doc/sphinxdoc/source/c_ml/math/*.png
 _doc/sphinxdoc/source/c_ml/*.html
 _unittests/ut_graph/*.prof
+_doc/notebooks/ml/onnxruntime*.json
+_doc/notebooks/ml/tree_*.onnx
