--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,15 +28,12 @@ line-length = 88
 max-complexity = 10
 
 [tool.ruff.per-file-ignores]
-"_doc/examples/plot_first_example.py" = ["E402", "F811"]
-"_doc/examples/plot_onnxruntime.py" = ["E402", "F811"]
-"onnx_array_api/array_api/_onnx_common.py" = ["F821"]
-"onnx_array_api/npx/__init__.py" = ["F401", "F403"]
-"onnx_array_api/npx/npx_functions.py" = ["F821"]
-"onnx_array_api/npx/npx_functions_test.py" = ["F821"]
-"onnx_array_api/npx/npx_tensors.py" = ["F821"]
-"onnx_array_api/npx/npx_var.py" = ["F821"]
-"onnx_array_api/profiling.py" = ["E731"]
-"onnx_array_api/reference/__init__.py" = ["F401"]
-"_unittests/ut_npx/test_npx.py" = ["F821"]
-
+"_doc/sphinxdoc/source/conf.py" = ["F821"]
+"mlstatpy/__init__.py" = ["E501"]
+"mlstatpy/graph/__init__.py" = ["F401"]
+"mlstatpy/graph/graph_distance.py" = ["E731"]
+"mlstatpy/image/detection_segment/__init__.py" = ["F401"]
+"mlstatpy/ml/__init__.py" = ["F401"]
+"mlstatpy/ml/ml_grid_benchmark.py" = ["E731"]
+"mlstatpy/nlp/__init__.py" = ["F401"]
+"mlstatpy/optim/__init__.py" = ["F401"]
