--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,10 @@ mako
 matplotlib
 memory_profiler
 mlinsights
-mlprodict>=0.8
+mlprodict
 nbconvert
 notebook
+onnx_array_api
 onnxruntime>=1.12
 pandas
 pillow
@@ -39,7 +40,7 @@ seaborn
 setuptools
 snakeviz
 scikit-learn>=1.1
-skl2onnx
+git+https://github.com/onnx/sklearn-onnx.git
 sphinx
 sphinx-bootstrap-theme
 sphinxcontrib.imagesvg
