--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -43,8 +43,10 @@ jobs:
       - name: Copy readme
         run: cp README* ./_doc/sphinxdoc/source
 
+      #- name: Documentation
+      #  run: python -m sphinx ./_doc/sphinxdoc/source ./dist/html
       - name: Documentation
-        run: python -m sphinx ./_doc/sphinxdoc/source ./dist/html
+        run: python setup build_sphinx
 
       - uses: actions/upload-artifact@v3
         with:
