--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,3 @@
-astroid
-autopep8
-blockdiag
-coverage
-Cython
-cytoolz
-dill
-hummingbird-ml
-ijson
-importlib_metadata
-ipython
-isort
-jdcal
-jupyter_sphinx
-jupyter
-jyquickhelper
-lifelines
-mako
-matplotlib
-memory_profiler
-mlinsights
-nbconvert
-notebook
-onnx_array_api
+mlinsights>=0.2
 onnxruntime>=1.12
-pandas
-pillow
-psutil
-pybind11
-pycodestyle
-pydata_sphinx_theme
-pyensae>=1.2.788
-pyinstrument
-pylint>=2.14.0
-pyquickhelper>=1.12
-pyquicksetup>=0.2.4
-seaborn
-setuptools
-snakeviz
-scikit-learn>=1.1
-git+https://github.com/onnx/sklearn-onnx.git
-sphinx
-sphinx_gallery 
-sphinxcontrib.imagesvg
-stack_data
-statsmodels
-tqdm
-traitlets
-vprof
-wheel
-xgboost
+skl2onnx
