--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ install:
   - pip install -r requirements-dev.txt
 
 script:
-  - python setup.py unittests
+  - python -m pytest _unittests --durations=10 --ignore-glob=**LONG*.py
