--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ install:
 build: off
 
 test_script:
-  - "%PYTHON%\\python -u setup.py unittests -d 30"
+  - "%PYTHON%\\python -m pytest _unittests --durations=10 --ignore-glob=**LONG*.py"
 
 after_test:
   - "%PYTHON%\\python -u setup.py bdist_wheel"
