--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -29,6 +29,15 @@ jobs:
       - name: Install requirements dev
         run: python -m pip install -r requirements-dev.txt
 
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements-dev.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+            ${{ runner.os }}-
+
       - name: Generate coverage report
         run: |
           pip install pytest
