--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
+*.dot
+*.dylib
+*.prof
 *.pyc
 *.pyd
-*.dylib
 *.so
-coverage.html/*
-_cache/*
 .coverage
-dist/*
-build/*
 .eggs/*
+_cache/*
+build/*
+dist/*
 *egg-info/*
 onnxruntime_profile*
 prof
